# Atlas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: agents.comp  blur.comp  default.frag  default.vert  game_of_life.comp  tex.comp
embed/: font.embed  logo.embed
include/: Render2D.h  RenderApi.h  application.h  atl_types.h  camera.h  event.h  gl_atl_utils.h  gl_utils.h  imgui_build.h  layer.h  logger.h  pch.h  utils.h  window.h
script/: embed.py
src/: Render2D.cpp  RenderApi.cpp  application.cpp  atl_types.cpp  camera.cpp  game_of_life.cpp  gl_atl_utils.h  gl_utils.cpp  gl_utils.h  imgui_build.cpp  logger.cpp  logger.h  main.cpp  pch.h  window.cpp
